# pycse

./: .RData  .buildinfo  .codecov.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PLAN_TEST_OPTIMIZATION.md  README.html  README.md  README.org  README.txt  SConstruct  TESTING.md  basic-python.html  color.table  content.html  data-analysis.html  differential-equations.html  genindex.html  index.html  index.org  install-pycse.py  interpolation.html  intro.html  linear-algebra.html  makefile  markdown-notebooks.html  markdown.html  math.html  nonlinear-algebra.html  notebooks.html  objects.inv  optimization.html  plotting.html  programming.html  py-modindex.html  pycse.css  pycse.el  (+15 more)
.github/workflows/: deploy.yml  publish.yml  pycse-tests-slow-batch1.yaml  pycse-tests-slow.yaml  pycse-tests.yaml
_sources/: basic-python.ipynb  data-analysis.ipynb  intro.md  markdown-notebooks.md  markdown.md  math.ipynb  nonlinear-algebra.ipynb  optimization.ipynb  plotting.ipynb  statistics.ipynb  worked-examples.ipynb
_sources/blog/: basic-python.ipynb  differential-equations.ipynb  interpolation.ipynb  linear-algebra.ipynb  math.ipynb  optimization.ipynb  plotting.ipynb  programming.ipynb  statistics.ipynb  units.ipynb
_sources/book/: 00-intro.ipynb  01-jupyter.ipynb  02-integration-1.ipynb  03-fode-1.ipynb  04-fode-2.ipynb  05-nth-odes.ipynb  07-nla-1.ipynb  08-nla-2.ipynb  10-min-max.ipynb  11-regression.ipynb  12-nonlinear-regression-2.ipynb  13-constrained-optimization.ipynb  15-intro-linear-algebra.ipynb  16-linear-algebra.ipynb  17-linear-algebra-2.ipynb  18-linear-regression.ipynb  20-autograd-applications.ipynb  21-machine-learning.ipynb  22-ml-2.ipynb  23-gp.ipynb  25-async-programming.ipynb  conclusions.md  intro.md
_sources/docs/: about.ipynb  execution-statistics.md  running-pycse.md  utils.ipynb
archive/: pycse.el  pycse.org
archive/pycse-chapters/: basic-python.org  differential-equations.org  license.org  linear-algebra.org  math.org  miscellaneous.org  nonlinear-algebra.org  optimization.org  programming.org  statistics.org  units.org  worked-examples.org
blog/: basic-python.html  data-analysis.html  differential-equations.html  interpolation.html  intro.html  linear-algebra.html  math.html  nonlinear-algebra.html  optimization.html  plotting.html  programming.html  statistics.html  units.html  worked-examples.html
book/: 00-intro.html  01-jupyter.html  02-integration-1.html  03-fode-1.html  04-fode-2.html  05-nth-odes.html  07-nla-1.html  08-nla-2.html  09-bvp.html  10-min-max.html  11-regression.html  12-nonlinear-regression-2.html  13-constrained-optimization.html  15-intro-linear-algebra.html  16-linear-algebra.html  17-linear-algebra-2.html  18-linear-regression.html  20-autograd-applications.html  21-machine-learning.html  22-ml-2.html  23-gp.html  24-parallel-processing.html  25-async-programming.html  26-reinforcement-learning.html  conclusions.html  intro.html
book/archive/: 01-fancy-outputs.html  02-practice-problems.html  05-practice-fode-problems.html  05-practice-quiz.html  06-what-could-possibly-go-wrong.html  07-practice-exam-1.html  09-practice-problems.html  10-nla-practice.html  13-practice-exam-2.html  14-review.html  16-practice.html  18-followup.html  20-practice.html  23-followup.html
data/: PT.txt  antoine_database.mat  debug-4.txt  debug.txt  example.xlsx  example2.xls  example4.xlsx  gc-data-21.txt  raman.txt  test.docx  testdata.txt
data/run2/: raman.txt
docker/: .jupyter_ystore.db  Dockerfile  Dockerfile-3.12  Dockerfile-3.13  Dockerfile-3.14  chrome  example.ipynb  jupyter_lab_config.py  jupyter_nbconvert_config.py  jupyter_server_config.json  jupyterlab-code-formatter.json  keyboard-shortcuts.json  makefile  pycse.sh  readme.org  start.sh
docker/.virtual_documents/: example.ipynb
docs/: about.html  beginner.html  execution-statistics.html  pycse.html  running-pycse.html  utils.html
examples/: active_surrogate_demo.ipynb  active_surrogate_demo.py
ipynb/notebooks/: index.ipynb
pycse/: 00-pycse-magic.py  PYCSE.py  README.org  __init__.py  beginner.py  cli.py  colab.py  colors.py  hashcache.py  install-pycse-magic.py  lisp.py  obipython.py  orgmode.py  orgmode_v1.py  plotly.py  publish.py  pyroxy.py  qmath.py  sandbox.py  supyrvisor.py  umath.py  units.py  utils.py
pycse-channel/: broadcasting.org  bvp.org  conditional-array-operations.org  constrained-minimize.org  functional-iteration.org  index.html  integer-minimize.org  intro-statistics.org  iteration.org  linear-regression.org  lmfit-notes.org  lmfit.org  means-different.org  minimize.org  notes.org  ode-events.org  operator-precedence.org  polynomials.org  readme.org  robust-regression.org  root-failures.org  scipy-constants.org  simple-fsolve.org  solve_ivp-1.org  statistics-mc-1.org  statistics-samples.org  uncertainties.org  units.org
pycse-channel/milp/: steel-milp.ipynb
pycse-channel/pattern-matching/: pattern-matching.ipynb
pycse-chapters/: #miscellaneous.org#  basic-python.org  data-analysis.org  differential-equations.org  interpolation.org  linear-algebra.org  math.org  nonlinear-algebra.org  optimization.org  plotting.org  programming.org  statistics.org  units.org  worked-examples.org
pycse-chapters/.ipynb_checkpoints/: basic-python-checkpoint.ipynb
pycse-jb/: makefile  requirements.txt
pycse-jb/pycse___python_computations_in_science_and_engineering/: _config.yml  _toc.yml  differential-equations.ipynb  intro.md  nonlinear-algebra.ipynb  programming.ipynb
pycse/nbconvert/: README.rst
pycse/pycse.egg-info/: PKG-INFO
pycse/server-example/: ASSIGNMENTS  USERS  cork-example.py  make-conf-cork.py  pycse-grades.el  s1.py  simulate-course.py  syllabus.org  test-cork-email.py  test.org  test.py
pycse/sklearn/: lhc.py  lr_uq.py  nnbr.py  surface_response.py
pycse/tests/: test_beginner.py  test_bvp.py  test_comparisons_units.py  test_division_units.py  test_lisp.py  test_multiplication.py  test_multiplication_units.py  test_numpyfuncs_units.py  test_odelay.py  test_pow.py  (+7 more)
python/: setup.py
(+361 files in other folders)
