# Copyright 2015-2024 John Kitchin
# (see accompanying license files for details).

[metadata]
name = pycse
version = 2.3.3
author = John Kitchin
author_email = jkitchin@andrew.cmu.edu
license = GPL
description = python computations in science and engineering

[options.entry_points]
console_scripts =
    pycse = pycse.cli:pycse

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    numdifftools
    pandas
    joblib
    matplotlib
    requests
    orjson

    
[flake8]
max-line-length = 80
per-file-ignores =
		 pycse/__init__.py:F401, F403,  E402
		 pycse/tests/test_*: D103
		 pycse/cli.py: E722
		 docker/jupyter_nbconvert_config.py: F821


[pylint]
disable=invalid-name,too-few-public-methods,keyword-arg-before-vararg, unused-argument


# see ~/.pypirc for 2FA setup with token
# See https://blog.ganssle.io/articles/2021/10/setup-py-deprecated.html
# (shell-command "python -m build")
# (shell-command "twine upload dist/*")